force-app/main/default/objects/Contact_Soojung__c/Contact_Soojung__c.object-meta.xml
<CustomObject>
    <label>Contact_Soojung</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact_Soojung</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>